# bazel-buildbarn

./: README.md  WORKSPACE
cmd/bbb_browser/: BUILD.bazel  browser_service.go  main.go
cmd/bbb_browser/templates/: header.html  page_action.html  page_command.html  page_directory.html  page_tree.html  view_command.html  view_directory.html  view_log.html
cmd/bbb_frontend/: BUILD.bazel  main.go
cmd/bbb_mount_input_root/: BUILD.bazel  main.go
cmd/bbb_redis_server/: BUILD.bazel  main.go
cmd/bbb_runner/: BUILD.bazel  main.go
cmd/bbb_scheduler/: BUILD.bazel  main.go
cmd/bbb_storage/: BUILD.bazel  main.go
cmd/bbb_worker/: BUILD.bazel  main.go
demo/: run.sh  storage-blobstore.conf
deployments/bare/: frontend-worker-blobstore.conf  run.sh
deployments/demo/: .gitignore  run.sh
deployments/docker-compose/: .gitignore  docker-compose.yml  run.sh
deployments/docker-compose/config-browser-frontend-worker/: blobstore.conf
deployments/docker-compose/config-storage/: blobstore.conf
deployments/kubernetes/: bbb-browser-deployment.yaml  bbb-browser-service.yaml  bbb-config-configmap.yaml  bbb-frontend-deployment.yaml  bbb-scheduler-debian9-deployment.yaml  bbb-worker-debian9-deployment.yaml
doc/diagrams/: bbb-overview.xml
internal/mock/: BUILD.bazel
kubernetes/: bbb-browser-deployment.yaml  bbb-config-configmap.yaml  bbb-frontend-deployment.yaml  bbb-frontend-service.yaml  bbb-scheduler-debian9-deployment.yaml  bbb-scheduler-debian9-service.yaml  bbb-worker-debian9-deployment.yaml
patches/com_github_hanwen_go_fuse/: create-nil-file.diff  rename-enoent.diff  setattr-crash.diff
pkg/ac/: BUILD.bazel  action_cache.go  action_cache_server.go  blob_access_action_cache.go  blob_access_action_cache_test.go
pkg/blobstore/: BUILD.bazel  action_cache_blob_access.go  batched_store_blob_access.go  blob_access.go  byte_stream_server.go  byte_stream_server_test.go  content_addressable_storage_blob_access.go  create_blob_access.go  empty_blob_filtering_blob_access.go  error_blob_access.go  existence_precondition_blob_access.go  existence_precondition_blob_access_test.go  merkle_blob_access.go  merkle_blob_access_test.go  metrics_blob_access.go  random_access_blob_access.go  read_caching_blob_access.go  redis_blob_access.go  redis_server.go  remote_blob_access.go  s3_blob_access.go  sharding_blob_access.go  size_distinguishing_blob_access.go  valid_digest_requiring_blob_access.go  valid_digest_requiring_blob_access_test.go
pkg/blobstore/circular/: BUILD.bazel  caching_offset_store.go  circular_blob_access.go  cursors.go  demultiplexing_offset_store.go  file_data_store.go  file_offset_store.go  file_state_store.go  read_writer_at.go  simple_digest.go
pkg/blobstore/configuration/: BUILD.bazel  create_blob_access.go
pkg/blobstore/sharding/: BUILD.bazel  shard_selector.go  sharding_blob_access.go  weighted_shard_permuter.go  weighted_shard_permuter_test.go  weighted_shard_selector.go  weighted_shard_selector_test.go
pkg/builder/: BUILD.bazel  build_executor.go  build_queue.go  caching_build_executor.go  caching_build_executor_test.go  demultiplexing_build_queue.go  demultiplexing_build_queue_test.go  forwarding_build_queue.go  local_build_executor.go  local_build_executor_test.go  server_log_injecting_build_executor.go  worker_build_queue.go
pkg/cas/: BUILD.bazel  blob_access_content_addressable_storage.go  byte_stream_server.go  byte_stream_server_test.go  content_addressable_storage.go  content_addressable_storage_server.go  directory_caching_content_addressable_storage.go  hardlinking_content_addressable_storage.go  read_write_decoupling_content_addressable_storage.go
pkg/environment/: BUILD.bazel  action_digest_subdirectory_manager.go  action_digest_subdirectory_manager_test.go  clean_build_directory_manager.go  clean_build_directory_manager_test.go  concurrent_manager.go  environment.go  local_execution_environment.go  manager.go  remote_execution_environment.go  runner_server.go  simple_manager.go  singleton_manager.go  temp_directory_cleaning_manager.go
pkg/filesystem/: BUILD.bazel  directory.go  file.go  local_directory.go  local_directory_test.go
pkg/fuse/: BUILD.bazel  block_size.go  content_addressable_storage_immutable_tree.go  default_fuse_node.go  dir_entry_list.go  directory.go  directory_backed_mutable_tree.go  directory_fuse_node.go  fuse_node.go  immutable_directory.go  immutable_directory_fuse_node.go  immutable_directory_node.go  immutable_file.go  immutable_file_fuse_node.go  immutable_file_node.go  immutable_symlink_node.go  immutable_tree.go  leaf.go  leaf_fuse_node.go  mutable_directory.go  mutable_file.go  mutable_tree.go  random_access_file.go  stateless_fuse_file.go  symlink.go  symlink_fuse_node.go  symlink_node.go
pkg/mock/: BUILD.bazel
pkg/proto/blobstore/: BUILD.bazel  blobstore.proto
pkg/proto/failure/: BUILD.bazel  failure.proto
pkg/proto/runner/: BUILD.bazel  runner.proto
pkg/proto/scheduler/: BUILD.bazel  scheduler.proto
pkg/util/: BUILD.bazel  digest.go  digest_keyer.go  error_reader.go  mutex.go  status.go  workpool.go
tools/: container.bzl
tools/debian8_base/: BUILD.bazel
tools/debian_base/: BUILD.bazel
