load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/EdSchouten/bazel-buildbarn/cmd/bbb_worker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/builder:go_default_library",
        "//pkg/cas:go_default_library",
        "//pkg/environment:go_default_library",
        "//pkg/proto/scheduler:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/ac:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "bbb_worker",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "bbb_worker_container",
    entrypoint = ["/bbb_worker"],
    files = [":bbb_worker"],
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bbb_worker_container_push",
    component = "bbb-worker",
    image = ":bbb_worker_container",
)
