load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "build_executor.go",
        "build_queue.go",
        "caching_build_executor.go",
        "demultiplexing_build_queue.go",
        "forwarding_build_queue.go",
        "local_build_executor.go",
        "storage_flushing_build_executor.go",
        "worker_build_queue.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/builder",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cas:go_default_library",
        "//pkg/environment:go_default_library",
        "//pkg/proto/failure:go_default_library",
        "//pkg/proto/runner:go_default_library",
        "//pkg/proto/scheduler:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/ac:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "caching_build_executor_test.go",
        "demultiplexing_build_queue_test.go",
        "local_build_executor_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/mock:go_default_library",
        "//pkg/proto/failure:go_default_library",
        "//pkg/proto/runner:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
