load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "environment.go",
        "manager.go",
        "simple_manager.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/environment",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/filesystem:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
    ],
)
