load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "environment.go",
        "manager.go",
        "simple_manager.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/environment",
    visibility = ["//visibility:public"],
    deps = ["//pkg/filesystem:go_default_library"],
)
