load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "directory.go",
        "file.go",
        "file_info.go",
        "local_directory.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/filesystem",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_sys//unix:go_default_library"],
)
