load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "content_addressable_storage_immutable_tree.go",
        "default_fuse_node.go",
        "dir_entry_list.go",
        "directory.go",
        "directory_backed_mutable_tree.go",
        "directory_fuse_node.go",
        "immutable_directory.go",
        "immutable_directory_fuse_node.go",
        "immutable_file.go",
        "immutable_file_fuse_node.go",
        "immutable_tree.go",
        "leaf.go",
        "leaf_fuse_node.go",
        "mutable_directory.go",
        "mutable_file.go",
        "mutable_tree.go",
        "stateless_fuse_file.go",
        "symlink.go",
        "symlink_fuse_node.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/fuse",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/cas:go_default_library",
        "//pkg/filesystem:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_hanwen_go_fuse//fuse:go_default_library",
        "@com_github_hanwen_go_fuse//fuse/nodefs:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
