load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "caching_offset_store.go",
        "circular_blob_access.go",
        "file_data_store.go",
        "file_offset_store.go",
        "file_state_store.go",
        "read_writer_at.go",
        "simple_digest.go",
    ],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/blobstore/circular",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
