load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["create_blob_access.go"],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/blobstore/configuration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/blobstore/circular:go_default_library",
        "//pkg/filesystem:go_default_library",
        "//pkg/proto/blobstore:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager:go_default_library",
        "@com_github_go_redis_redis//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
