load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# Force the use of @com_github_bazelbuild_remote_apis.
# gazelle:ignore

proto_library(
    name = "failure_proto",
    srcs = ["failure.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remoteexecution_proto"],
)

go_proto_library(
    name = "failure_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/proto/failure",
    proto = ":failure_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":failure_go_proto"],
    importpath = "github.com/EdSchouten/bazel-buildbarn/pkg/proto/failure",
    visibility = ["//visibility:public"],
)
